testsuite/tests/rename/should_fail/RnStaticPointersFail03.hs
{-# LANGUAGE StaticPointers #-}

module RnStaticPointersFail03 where

f x = static (x . id)
